small modification for the report generation

--- a/template.html
+++ b/template.html
@@ -46,6 +46,7 @@
     <!--    Statistics    -->
     <div class='bottom-30 '>
         <h2>Overall Statistics</h2>
+        <p>Average AUC: {{average_AUC}}</p>
         <p>Total Super Categories: {{total_super_categories}}</p>
         <p>Total Categories: {{total_categories}}</p>
         <p>Categories randomly combined: {{categories_combined}}</p>
